--- a/configs/workspace.yaml
+++ b/configs/workspace.yaml
@@ -9,6 +9,19 @@ spec:
   displayName: uid-123-folder
   folderRef:
     external: "1035593700102"
+---
+apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
+kind: Folder
+metadata:
+  labels:
+    label-one: "home-folder"
+  name: home-folder
+  namespace: config-control
+spec:
+  displayName: home-folder
+  folderRef:
+    external: uid-123-folder
+    namespace: config-control
 #---
 #apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 #kind: Project
