--- a/configs/workspace.yaml
+++ b/configs/workspace.yaml
@@ -13,6 +13,8 @@ spec:
 apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 kind: Folder
 metadata:
+  annotations:
+    config.kubernetes.io/depends-on: resourcemanager.cnrm.cloud.google.com/namespaces/config-control/Folder/uid-123-folder
   labels:
     label-one: "home-folder"
   name: home-folder
