--- a/configs/workspace.yaml
+++ b/configs/workspace.yaml
@@ -24,6 +24,19 @@ spec:
   folderRef:
     name: uid-123-folder
     namespace: config-control
+---
+apiVersion: iam.cnrm.cloud.google.com/v1beta1
+kind: IAMPolicy
+metadata:
+  name: iampolicy
+spec:
+  resourceRef:
+    kind: Folder
+    name: home-folder
+  bindings:
+    - members:
+        - user:uid.123@evilmachine.net
+      role: roles/owner
 #---
 #apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 #kind: Project
