--- a/configs/workspace.yaml
+++ b/configs/workspace.yaml
@@ -35,6 +35,7 @@ spec:
   resourceRef:
     kind: Folder
     name: home-folder
+    namespace: config-control
   bindings:
     - members:
         - user:uid.123@evilmachine.net
