--- a/configs/workspace.yaml
+++ b/configs/workspace.yaml
@@ -28,7 +28,7 @@ spec:
 apiVersion: iam.cnrm.cloud.google.com/v1beta1
 kind: IAMPolicy
 metadata:
-  name: iampolicy
+  name: iampolicy-project-owner
   annotations:
     config.kubernetes.io/depends-on: resourcemanager.cnrm.cloud.google.com/namespaces/config-control/Folder/home-folder
   namespace: config-control
@@ -41,6 +41,23 @@ spec:
     - members:
         - user:uid.123@evilmachine.net
       role: roles/owner
+---
+apiVersion: iam.cnrm.cloud.google.com/v1beta1
+kind: IAMPolicy
+metadata:
+  name: iampolicy-project-creator
+  annotations:
+    config.kubernetes.io/depends-on: resourcemanager.cnrm.cloud.google.com/namespaces/config-control/Folder/home-folder
+  namespace: config-control
+spec:
+  resourceRef:
+    kind: Folder
+    name: home-folder
+    namespace: config-control
+  bindings:
+    - members:
+        - user:uid.123@evilmachine.net
+      role: roles/resourcemanager.projectCreator
 #---
 #apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 #kind: Project
