--- a/configs/workspace.yaml
+++ b/configs/workspace.yaml
@@ -58,6 +58,23 @@ spec:
     - members:
         - user:uid.123@evilmachine.net
       role: roles/resourcemanager.projectCreator
+---
+apiVersion: iam.cnrm.cloud.google.com/v1beta1
+kind: IAMPolicy
+metadata:
+  name: iampolicy-folder-viewer
+  annotations:
+    config.kubernetes.io/depends-on: resourcemanager.cnrm.cloud.google.com/namespaces/config-control/Folder/home-folder
+  namespace: config-control
+spec:
+  resourceRef:
+    kind: Folder
+    name: home-folder
+    namespace: config-control
+  bindings:
+    - members:
+        - user:uid.123@evilmachine.net
+      role: roles/resourcemanager.folderViewer
 #---
 #apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
 #kind: Project
