--- a/configs/workspace.yaml
+++ b/configs/workspace.yaml
@@ -9,21 +9,21 @@ spec:
   displayName: uid-123-folder
   folderRef:
     external: "1035593700102"
----
-apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
-kind: Folder
-metadata:
-  annotations:
-    config.kubernetes.io/depends-on: resourcemanager.cnrm.cloud.google.com/namespaces/config-control/Folder/uid-123-folder
-  labels:
-    label-one: "home-folder"
-  name: home-folder
-  namespace: config-control
-spec:
-  displayName: home-folder
-  folderRef:
-    name: uid-123-folder
-    namespace: config-control
+#---
+#apiVersion: resourcemanager.cnrm.cloud.google.com/v1beta1
+#kind: Folder
+#metadata:
+#  annotations:
+#    config.kubernetes.io/depends-on: resourcemanager.cnrm.cloud.google.com/namespaces/config-control/Folder/uid-123-folder
+#  labels:
+#    label-one: "home-folder"
+#  name: home-folder
+#  namespace: config-control
+#spec:
+#  displayName: home-folder
+#  folderRef:
+#    name: uid-123-folder
+#    namespace: config-control
 #---
 #apiVersion: iam.cnrm.cloud.google.com/v1beta1
 #kind: IAMPolicy
